Fix text spacing in lists

--- a/frontend/assets/styles/global.scss
+++ b/frontend/assets/styles/global.scss
@@ -30,8 +30,14 @@ h6 {
   font-weight: normal;
 }
 
-p {
+ol,
+p,
+ul {
   line-height: 1.5;
+}
+
+li {
+  margin: 0.25em 0;
 }
 
 .panel {
